Add Detail Screen
Implement update question logic

--- a/BlissIOSTest/BlissIOSTest/Localizable.strings
+++ b/BlissIOSTest/BlissIOSTest/Localizable.strings
@@ -19,3 +19,6 @@
 "error_description" = "An error occurred, please try again";
 "email_address" = "Email Address";
 "cancel" = "Cancel";
+"tanks_for_voting" = "Thanks for voting";
+
+
